[project]
name = "pianogen"
version = "0.1.0"
description = "generate piano music"
authors = [{name = "eri24816", email = "a931eric@gmail.com"}]
license = "MIT"

dependencies = [
    "torch>=2.0.0",
    "music-data-analysis @ git+https://github.com/eri24816/music-data-analysis.git"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pianogen"]